# FreeRTOS-FAT-CLI-for-RPi-Pico

FreeRTOS+FAT+CLI/: CMakeLists.txt
FreeRTOS+FAT+CLI/include/: FreeRTOSConfig.h  my_debug.h
FreeRTOS+FAT+CLI/portable/RP2040/: sd_card.c  sd_spi.c  sd_spi.simple.c  spi.h
FreeRTOS+FAT+CLI/src/: CLI-commands.c  File-related-CLI-commands.c  crash.c
example/: stdio_cli.c
example/tests/: CreateAndVerifyExampleFiles.c
