add_library(FreeRTOS+FAT+CLI INTERFACE)
target_sources(FreeRTOS+FAT+CLI INTERFACE
        ${FREERTOS_KERNEL_PATH}/event_groups.c
        ${FREERTOS_KERNEL_PATH}/list.c
        ${FREERTOS_KERNEL_PATH}/queue.c
        ${FREERTOS_KERNEL_PATH}/stream_buffer.c
        ${FREERTOS_KERNEL_PATH}/tasks.c
        ${FREERTOS_KERNEL_PATH}/timers.c 
        #${FREERTOS_KERNEL_PATH}/${FREERTOS_KERNEL_RP2040_RELATIVE_PATH}        
        #FreeRTOS-Kernel/portable/GCC/ARM_CM0_RP2040/port.c 
        #FreeRTOS-Kernel/portable/GCC/ARM_CM0/port.c 
        ${FREERTOS_KERNEL_PATH}/${FREERTOS_KERNEL_RP2040_RELATIVE_PATH}/port.c
        ${FREERTOS_KERNEL_PATH}/portable/MemMang/heap_4.c 
        ${CMAKE_CURRENT_SOURCE_DIR}/../../Lab-Project-FreeRTOS-FAT/ff_crc.c
        ${CMAKE_CURRENT_SOURCE_DIR}/../../Lab-Project-FreeRTOS-FAT/ff_dir.c
        ${CMAKE_CURRENT_SOURCE_DIR}/../../Lab-Project-FreeRTOS-FAT/ff_error.c
        ${CMAKE_CURRENT_SOURCE_DIR}/../../Lab-Project-FreeRTOS-FAT/ff_fat.c
        ${CMAKE_CURRENT_SOURCE_DIR}/../../Lab-Project-FreeRTOS-FAT/ff_file.c
        ${CMAKE_CURRENT_SOURCE_DIR}/../../Lab-Project-FreeRTOS-FAT/ff_format.c
        ${CMAKE_CURRENT_SOURCE_DIR}/../../Lab-Project-FreeRTOS-FAT/ff_ioman.c
        ${CMAKE_CURRENT_SOURCE_DIR}/../../Lab-Project-FreeRTOS-FAT/ff_locking.c
        ${CMAKE_CURRENT_SOURCE_DIR}/../../Lab-Project-FreeRTOS-FAT/ff_memory.c
        ${CMAKE_CURRENT_SOURCE_DIR}/../../Lab-Project-FreeRTOS-FAT/ff_stdio.c
        ${CMAKE_CURRENT_SOURCE_DIR}/../../Lab-Project-FreeRTOS-FAT/ff_string.c
        ${CMAKE_CURRENT_SOURCE_DIR}/../../Lab-Project-FreeRTOS-FAT/ff_sys.c
        ${CMAKE_CURRENT_SOURCE_DIR}/../../Lab-Project-FreeRTOS-FAT/ff_time.c 
        ${CMAKE_CURRENT_SOURCE_DIR}/portable/RP2040/sd_spi.c
        ${CMAKE_CURRENT_SOURCE_DIR}/portable/RP2040/demo_logging.c
        ${CMAKE_CURRENT_SOURCE_DIR}/portable/RP2040/ff_sddisk.c
        ${CMAKE_CURRENT_SOURCE_DIR}/portable/RP2040/spi.c
        ${CMAKE_CURRENT_SOURCE_DIR}/portable/RP2040/sd_card.c
        ${CMAKE_CURRENT_SOURCE_DIR}/portable/RP2040/crc.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/my_debug.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/FreeRTOS_time.c
        #src/stdio_cli.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/crash.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/CLI-commands.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/ff_utils.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/File-related-CLI-commands.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/FreeRTOS_CLI.c
)
target_link_libraries(FreeRTOS+FAT+CLI INTERFACE
        FreeRTOS-Kernel
        FreeRTOS-Kernel-Heap4
        hardware_adc
        hardware_spi
        hardware_dma
        hardware_clocks
        hardware_rtc
        hardware_timer
        pico_multicore
        pico_sync
        pico_stdlib
)
target_include_directories(FreeRTOS+FAT+CLI INTERFACE 
        include/ 
        ../../Lab-Project-FreeRTOS-FAT/include/
        portable/RP2040/
        ${FREERTOS_KERNEL_PATH}/include 
#        FreeRTOS-Kernel/portable/GCC/ARM_CM0 #_RP2040
        ${FREERTOS_KERNEL_PATH}/${FREERTOS_KERNEL_RP2040_RELATIVE_PATH}/include
)